# MCPGuardian

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DOWNLOADABLE_CONNECTOR_AGENT_README.md  Dockerfile  GITHUB_PUSH_GUIDE.md  Makefile  Procfile  README.md  WEB_APP_README.md  alembic.ini  connector_agent_direct.py  deploy.sh  docker-compose.yml  downloadable_connector_agent.py  env.example  main.py  push_to_github.sh  pyproject.toml  railway.json  render.yaml  requirements.txt  run_web_app.py  seed_database.py  test_connector.py
data/: clusters.json  discover_notion.jsonl  servers.csv
scripts/: seed.py
src/mcp_harvest/: cli.py  integrate_discover.py  models.py
src/mcp_multiagent_selector/: __init__.py  config.py  database.py  db.py  models.py  schemas.py  web_app.py
src/mcp_multiagent_selector/agents/: __init__.py  registry_crawler_agent.py
src/mcp_multiagent_selector/alembic/: env.py
src/mcp_multiagent_selector/alembic/versions/: 001_initial.py
src/mcp_multiagent_selector/api/: __init__.py  main.py
src/mcp_multiagent_selector/crawl/: __init__.py  extract.py  registries.py  web.py
src/mcp_multiagent_selector/graph/: __init__.py  graph.py  llm.py  nodes.py
src/mcp_multiagent_selector/mcp_server/: __init__.py  server.py
src/mcp_multiagent_selector/security/: __init__.py  scoring.py
src/ml/: agent_ontology.py
static/: style.css
templates/: index.html
tests/: test_end_to_end.py  test_extract.py  test_scoring.py
