[project]
name = "mcp-multiagent-selector"
version = "0.1.0"
description = "MCP server that orchestrates a multi-agent LangGraph workflow to find and rank MCP servers by security score"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "modelcontextprotocol[server]>=0.1.0",
    "tenacity>=9.0",
    "openai>=1.0",
    "anthropic>=0.18",
    "playwright>=1.40",
    "beautifulsoup4>=4.12",
    "jinja2>=3.1",
    "aiofiles>=23.0",
    "asyncio-mqtt>=0.16"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
