[project]
name = "mcp-guardian"
version = "0.1.0"
description = "MCP Guardian - AI-powered security-first MCP server discovery and connection system"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.112",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "requests>=2.31",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "aiofiles>=23.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "black>=23.0",
    "isort>=5.12",
    "flake8>=6.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_multiagent_selector"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
